--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
